2004-01-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add webify.pl to distribution.

2004-01-01  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: Fix incorrect nesting of libpdf status test.

2003-12-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util3d.c (polyline3d_next): Bugfix. The patch on 2003-12-19
	broke contouring in hidden3d mode.  polyline3d_previous_vertex
	wasn't updated.

2003-12-26  Jim Van Zandt  <jrv@debian.org>

	* src/set.c (load_tic_user): user tic definition can have 3rd
	token specifying minitic

	* src/axis.h: ticmark.level specifies major or minitic

	* src/axis.c (gen_tics): Request user-supplied minitics

	* docs/gnuplot.doc: document user-supplied minitics

2003-12-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c: Fix buffer overflow in conv_text() if the text
	contains many characters with the high bit set.

	* demo/enhancedtext.dem: Add demo for enhanced text mode.

	* demo/charset.dem: Add demo that displays font and character
	encoding.

2003-12-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm src/gplt_x11.c src/set.c src/term_api.h
	src/term.c: Add support for ISO-8859-15 character encoding.

	* docs/gnuplot.doc: Minor changes to What's New.

2003-12-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm: Add missing #ifdef PIPE_IPC.

	* term/pm.trm: Remove useless declaration.

2003-12-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Sodipodi didn't care that the namespace URL was
	junk, but the Adobe svg viewer doesn't like this. Give it the real
	URL.

2003-12-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util3d.h (polyline3d_start, polyline3d_next): Prototypes
	added.

	* src/util3d.c (draw3d_line_unconditional): Avoid re-doing the
	linetype change if it's to the same as in the lp_style_type
	already applied.
	(polyline3d_previous_vertex): New static variable.